# Eurobot-2026-Vision

./: .env  .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: docker_action.yml
config/: dds.xml
docker/: Dockerfile  compose.yaml
docker/composes/: compose.dev.yml  compose.run.yml
docker/dockerfiles/: Dockerfile.librealsense  Dockerfile.ros  docker-bake.hcl
docker/modules/: install_realsense.sh  install_ros2tool.sh  install_ultralytics.sh
rosbag2_2026_01_08-20_12_54/: metadata.yaml  rosbag2_2026_01_08-20_12_54_0.db3
rosbag2_2026_01_09-08_55_25/: metadata.yaml  rosbag2_2026_01_09-08_55_25_0.db3
src/aruco_ros/: CMakeLists.txt  package.xml
src/aruco_ros/Robot_localization/: CMakeLists.txt  package.xml
src/aruco_ros/Robot_localization/config/: camera_param.yaml
src/aruco_ros/Robot_localization/launch/: all_launch.py
src/aruco_ros/Robot_localization/src/: Robot_detector_node.cpp  Robot_localizer_node.cpp  robot_detector_node.cpp
src/aruco_ros/aruco_robot/: CMakeLists.txt  package.xml
src/aruco_ros/aruco_robot/config/: robot_param.yaml
src/aruco_ros/aruco_robot/launch/: robot_launch.py
src/aruco_ros/aruco_robot/src/: Aruco_detector_node.cpp  Camera_calibrator_node.cpp  Relative_detector_node.cpp  Robot_detector_node.cpp  Robot_localizer_node.cpp  robot_detector.cpp
src/aruco_ros/aruco_sima/: CMakeLists.txt  package.xml
src/aruco_ros/aruco_sima/config/: sima_param.yaml
src/aruco_ros/aruco_sima/launch/: sima_launch.py  sima_localization.launch.py
src/aruco_ros/aruco_sima/src/: Aruco_detector_node.cpp  Sima_detector_node.cpp  sima_detector.cpp
src/aruco_ros/robot_sima_localization/: CMakeLists.txt  package.xml
src/aruco_ros/robot_sima_localization/config/: camera_param.yaml
src/aruco_ros/robot_sima_localization/launch/: all_launch.py
src/aruco_ros/robot_sima_localization/src/: Robot_detector_node.cpp  Robot_localizer_node.cpp  Sima_detector_node.cpp  aruco_detector_node.cpp
src/aruco_ros/src/: aruco_detector_node.cpp  object_feedback_node.cpp
src/realsense_ros/realsense2_camera/launch/: rs_launch.py
src/region_status/: CMakeLists.txt  package.xml
src/region_status/config/: presence_detection_params.yaml
src/region_status/launch/: presence_detection_launch.py
src/region_status/src/: presence_detection.cpp
src/yolo_ros/: CMakeLists.txt  package.xml
src/yolo_ros/config/: params.yaml
src/yolo_ros/datasets/aruco_data/: .gitignore
src/yolo_ros/launch/: hazelnut_detect_launch.py
src/yolo_ros/src/: save_aruco_training_data.py  save_depth_training_data.py  yolo_node.py
